# course_work_drf

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  tests.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
